--- a/style.css
+++ b/style.css
@@ -2,20 +2,69 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
-    width: 100%;
+    width: 80%;
+}
+
+button{
+    background-color:#DB0510;
+    width: 100px;
+    height: 25px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 header {
-    padding: 1rem;
+    padding: 1rem 0;
+    position: fixed;
+    width: 100%;
 }
 
 header .header-wrap{
     display: flex;
-    justify-content: space-between; 
-    margin: 0 auto;
-    width: 90%;
+    justify-content: space-between ;
     align-items: center;
+    width: 90%;
+    margin: 0 auto;
 }
+
+.first  {
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.9), rgba(0,0,0,0.013),
+    rgb(0,0,0,0.8)), url('./images/background.jpg');
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    height: 100vh;
+    justify-content: center ;
+    align-items: center;
+    text-align: center;
+    margin-top: 30px
+}
+
+.first h1{
+    font-size: 4rem;
+}
+
+.first .first-text
+{
+    font-size: xx-large;
+}
+
+.first .content {
+    font-weight: 300%;
+    color: white;
+    margin: auto;
+}
+
+.form-control {
+    margin-top: 30px;
+    font-size: 1.5em;
+}
+
+/*background-image: linear-gradient(to bottom, black, grey),
